fix(insta): remove scrollbar width change

--- a/styles/instagram/catppuccin.user.css
+++ b/styles/instagram/catppuccin.user.css
@@ -13,8 +13,6 @@
 @var select lightFlavor "Light Flavor" ["latte:Latte*", "frappe:Frappé", "macchiato:Macchiato", "mocha:Mocha"]
 @var select darkFlavor "Dark Flavor" ["latte:Latte", "frappe:Frappé", "macchiato:Macchiato", "mocha:Mocha*"]
 @var select accentColor "Accent" ["rosewater:Rosewater", "flamingo:Flamingo", "pink:Pink", "mauve:Mauve", "red:Red", "maroon:Maroon", "peach:Peach", "yellow:Yellow", "green:Green", "teal:Teal", "blue:Blue", "sapphire:Sapphire*", "sky:Sky", "lavender:Lavender", "subtext0:Gray"]
-
-@var text scrollbar_width "Scrollbar width" 8px
 ==/UserStyle== */
 
 @-moz-document domain('instagram.com') {
@@ -100,7 +98,6 @@
     --blue-2: #rgbify(@blue) [];
     --ig-close-friends-refreshed: #rgbify(@green) [];
     --ig-text-input-border-hover-prism: #rgbify(@surface1) [];
-    scrollbar-width: none;
     scrollbar-color: @accent-color @crust;
 
     //placehoder textcolor
@@ -637,7 +634,6 @@
     }
     // Scrollbar
     ::-webkit-scrollbar {
-      width: @scrollbar_width;
       background-color: @crust;
     }
 
